# worktree-manager

./: .editorconfig  .env.example  .pre-commit-config.yaml  ADR.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  GEMINI.md  PLAN.md  PRD.md  README.md  SECURITY.md  SPEC.md  TEST_COVERAGE_MATRIX.md  _typos.toml  clippy.toml  codecov.yml  deny.toml  gitleaks.toml  mise.toml  rustfmt.toml
.config/: nextest.toml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: cargo-deny.yml  ci.yml  coverage.yml  quality-gate.yml  release.yml  sast.yml  security.yml
docs/journeys/: index.md  quick-start.md
docs/plans/: AGILEPLUS_SPEC.md  KILO_GASTOWN_SPEC.md
docs/stories/: hello-world.md
src/: main.rs
src/worktree_manager/: mod.rs
src/worktree_manager/application/: mod.rs  service.rs
src/worktree_manager/cli/: mod.rs
src/worktree_manager/domain/: errors.rs  mod.rs  models.rs
src/worktree_manager/infrastructure/: filesystem_adapter.rs  git_adapter.rs  mod.rs
src/worktree_manager/ports/: mod.rs
