[package]
name = "worktree-manager"
version = "0.1.0"
edition = "2021"
description = "Git worktree automation and management"
authors = ["Phenotype"]
license = "MIT"
repository = "https://github.com/phenotype-dev/worktree-manager"
keywords = ["git", "worktree", "devops", "automation"]
categories = ["development-tools", "version-control"]

[workspace]
members = []

[lib]
name = "worktree_manager"
path = "src/worktree_manager/mod.rs"

[[bin]]
name = "wtm"
path = "src/main.rs"

[dependencies]
# Core
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
